RESOLVED FIXED89225
Web Inspector: CRASH when DebuggerAgent.setBreakpoint was called twice for the same location
https://bugs.webkit.org/show_bug.cgi?id=89225
Summary Web Inspector: CRASH when DebuggerAgent.setBreakpoint was called twice for th...
Ilya Tikhonovsky
Reported 2012-06-15 09:33:19 PDT
EOM
Attachments
Patch (1.88 KB, patch)
2012-06-15 09:35 PDT, Ilya Tikhonovsky
pfeldman: review+
Ilya Tikhonovsky
Comment 1 2012-06-15 09:35:29 PDT
Ilya Tikhonovsky
Comment 2 2012-06-15 09:48:36 PDT
Note You need to log in before you can comment on or make changes to this bug.