Web Inspector: CRASH when DebuggerAgent.setBreakpoint was called twice for the same location. https://bugs.webkit.org/show_bug.cgi?id=89225

Reviewed by Pavel Feldman.

* inspector/InspectorDebuggerAgent.cpp:
(WebCore::InspectorDebuggerAgent::setBreakpoint):

Canonical link: https://commits.webkit.org/107084@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120470 268f45cc-cd09-0410-ab3c-d52691b4dbfc